add links to jd info

--- a/application/jobs/templates/includes/jd.html
+++ b/application/jobs/templates/includes/jd.html
@@ -50,11 +50,11 @@
       <tbody>
         <tr>
           <td>Division:</td>
-          <td>{{ jd.team }}</td>
+          <td><a href="{{ jd.team_url }}">{{ jd.team }}</a></td>
         </tr>
         <tr>
           <td>Department</td>
-          <td>{{ jd.department }}</td>
+          <td><a href="{{ jd.department_url }}">{{ jd.department }}</a></td>
         </tr>
         <tr>
           <td>Location:</td>
@@ -62,7 +62,7 @@
         </tr>
         <tr>
           <td>Grade:</td>
-          <td>{{ jd.grade }}</td>
+          <td><a href="/info/grade">{{ jd.grade }}</a></td>
         </tr>
         <tr>
           <td>Contract Type:</td>
