add expiry date to job offer

--- a/application/signup/templates/basicprofile_checklist.html
+++ b/application/signup/templates/basicprofile_checklist.html
@@ -10,6 +10,7 @@
       {% include "partials/basicprofile.html" ignore missing %}
       </section>
       <section class="component component--single">
+        <span class="job__offer__expiry">Offer expires in 3 days</span>
         {% include "partials/job-offer.html" ignore missing %}
       </section>
     </div>
