--- a/application/signup/templates/partials/job-offer.html
+++ b/application/signup/templates/partials/job-offer.html
@@ -1,5 +1,5 @@
 <h4 class="heading-medium component__head">Job offer</h4>
-<ul class="component__body">
+<ul class="component__body job__offer">
   <li><a href="">#14562872</a></li>
   <li>Front-end developer</li>
   <li>Government Digital Service</li>
