--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -215,3 +215,12 @@ button.btn--edit--dark {
   border-top: 1px solid $grey-2;
   padding-top: 10px;
 }
+.job__offer__expiry {
+  display: block;
+  background: $link-colour;
+  color: $page-colour;
+  text-align: center;
+  padding: 5px 0;
+  margin-top: -30px;
+  margin-bottom: 15px;
+}
