add reviewing to cs perf profile

--- a/application/jobs/templates/review.html
+++ b/application/jobs/templates/review.html
@@ -90,7 +90,7 @@
     <div class="form-group">
       <input type="submit" class="button" value="Complete">
       <ul>
-        <li><a href="/">Back</a></li>
+        <li><a href="/signup/csprofile_perf">Back</a></li>
       </ul>
     </div>
 
