--- a/application/jobs/static/css/components/_profile.scss
+++ b/application/jobs/static/css/components/_profile.scss
@@ -67,8 +67,8 @@
 .profile__status {
   position: relative;
 
-  &::before {
-    visibility: hidden;
+  &:before {
+    content: "to review";
     font-size: 14px;
     text-transform: uppercase;
     color: $page-colour;
@@ -78,18 +78,17 @@
     line-height: 1em;
     padding: 5px 5px 2px;
     font-weight: 600;
+    background: $grey-2;
   }
   
 }
 
-.profile__status--reviewed::before {
-  visibility: visible;
+.profile__status--reviewed:before {
   content: "reviewed";
   background: $button-colour;
 }
 
-.profile__status--draft::before {
-  visibility: visible;
+.profile__status--draft:before {
   content: "draft";
   background: $beta-colour;
 }
