add link to booked courses

--- a/application/signup/templates/csprofile_learning.html
+++ b/application/signup/templates/csprofile_learning.html
@@ -65,6 +65,7 @@
         {% endfor %}
 
       </ul>
+      <a href="/google-calendar" class="foot-link">save to iCal / Outlook / Google calendar</a>
     </div>
   </section>
   <section class="section">
