fix broken images

--- a/application/jobs/templates/includes/profile.html
+++ b/application/jobs/templates/includes/profile.html
@@ -2,7 +2,7 @@
   {% if user is defined and user.profile_pic is defined %}
     <img src="{{ user.profile_pic }}" class="profile__pic">
   {% else %}
-    <img src="http://placehold.it/100x100" class="profile__pic">
+    <img src="/static/images/profiles/jake.jpg" class="profile__pic">
   {% endif %}
   <div class="profile__info">
     <h3 class="heading-normal profile__name">
