--- a/application/signup/templates/application_history.html
+++ b/application/signup/templates/application_history.html
@@ -60,7 +60,7 @@
             <a href="" class="foot-link">see details</a>
           </li>
         </ul>
-        <div class="from-linkedin"><span>provided by </span><img class="linkedin-image" src="/static/images/linkedinx14.png" alt="" /></div>
+        <div class="from-linkedin"><span>provided by </span><img class="linkedin-image" src="/static/images/Linkedinx14.png" alt="linkedin logo" /></div>
       </section>
       <a href="/signup/application/competencies" class="button btn--right">next step</a>
     </div>
