--- a/application/signup/templates/csprofile_jobs_history.html
+++ b/application/signup/templates/csprofile_jobs_history.html
@@ -29,6 +29,7 @@
             </div>
           </div>
           <a href="">view job description for role</a>
+          <br /><a href="/signup/cs_perf/history">view performance reviews</a>
         </li>
 
         <li class="past-role">
@@ -49,6 +50,7 @@
             </div>
           </div>
           <a href="">view job description for role</a>
+          <br /><a href="/signup/cs_perf/history">view performance reviews</a>
         </li>
 
         <li class="past-role">
@@ -69,6 +71,7 @@
             </div>
           </div>
           <a href="">view job description for role</a>
+          <br /><a href="/signup/cs_perf/history">view performance reviews</a>
         </li>
       </ul>
     </div>
