update Building Services data request

--- a/application/prejoining/templates/pass_data.html
+++ b/application/prejoining/templates/pass_data.html
@@ -1,6 +1,6 @@
 {% extends "data_access.html" %}
 {% block content %}
-<p>To create your pass the XX would like to use:</p>
+<p>To create your pass Building Services would like to use:</p>
 <ul class="list-bullet">
   <li>your name</li>
   <li>your profile pic</li>
