add HTTP basic auth

--- a/application/static/css/govuk.scss
+++ b/application/static/css/govuk.scss
@@ -15,7 +15,7 @@
 @import "../govuk_frontend_toolkit/stylesheets/design-patterns/buttons";
 @import "../govuk_frontend_toolkit/stylesheets/design-patterns/alpha-beta";
 
-// Import GOV.UK elements which aren't yet in the frontend tookkit
+// Import GOV.UK elements which aren't yet in the frontend toolkit
 @import "../govuk_elements/public/sass/elements/helpers";
 @import "../govuk_elements/public/sass/elements/reset";
 @import "../govuk_elements/public/sass/elements/elements-typography";
