add CATEGORIES attr to hcalendar

--- a/application/signup/templates/partials/profile/next-meeting.html
+++ b/application/signup/templates/partials/profile/next-meeting.html
@@ -3,6 +3,7 @@
   <div class="column-two-thirds next-meeting__details__wrap">
     <ul class="next-meeting__details">
       <li><h3 class="next-meeting__heading">Next meeting</h3></li>
+      <li class="visuallyhidden" itemprop="categories">MEETING</li>
       <li class="next-meeting__name summary" itemprop="summary">Team show & tell</li>
       <li class="location" itemprop="location">Red sofas</li>
       <li><abbr class="dtstart" itemprop="dtstart" title="20150627T150000">3pm</abbr></li>
