add ical links to course lists

--- a/application/signup/templates/csprofile_learning.html
+++ b/application/signup/templates/csprofile_learning.html
@@ -54,6 +54,8 @@
 
       </ul>
       <a class="foot-link" href="/learning/mandatory">see full list of mandatory courses</a>
+      <br />
+      <a href="/google-calendar" class="foot-link ical-link" data-ical-nodes="mand1 mand2 mand3 mand4">save to iCal / Outlook / Google calendar</a>
     </div>
     <div class="column-half">
       <h2 class="heading-small">Your courses</h2>
@@ -65,7 +67,7 @@
         {% endfor %}
 
       </ul>
-      <a href="/google-calendar" class="foot-link">save to iCal / Outlook / Google calendar</a>
+      <a href="/google-calendar" class="foot-link ical-link" data-ical-nodes="scrum preskills">save to iCal / Outlook / Google calendar</a>
     </div>
   </section>
   <section class="section">
