refactor pathways layout, now more responsive

--- a/application/signup/templates/csprofile_learning.html
+++ b/application/signup/templates/csprofile_learning.html
@@ -73,41 +73,57 @@
   <section class="section">
     <h2 class="heading-small">Development pathways</h2>
     <ul class="pathways-list">
+
       <li class="development-path grid-row">
         <div class="column-quarter">
-          Javascript
+          <span class="development-path__name">Javascript</span>
         </div>
-        <div class="column-twelfth stage__status stage__status--complete"></div>
-        <div class="column-twelfth stage__status stage__status--complete"></div>
-        <div class="column-twelfth stage__status stage__status--complete"></div>
-        <div class="column-twelfth stage__status stage__status--complete"></div>
-        <div class="column-twelfth stage__status stage__status--complete"></div>
-        <div class="column-twelfth stage__status"></div>
-        <div class="column-twelfth stage__status"></div>
-        <div class="column-twelfth stage__status"></div>
+        <div class="column-three-quarter">
+          <ol class="development-path__steps">
+            <li class="column-mini-eighth stage__status stage__status--complete"></li>
+            <li class="column-mini-eighth stage__status stage__status--complete"></li>
+            <li class="column-mini-eighth stage__status stage__status--complete"></li>
+            <li class="column-mini-eighth stage__status stage__status--complete"></li>
+            <li class="column-mini-eighth stage__status stage__status--complete"></li>
+            <li class="column-mini-eighth stage__status"></li>
+            <li class="column-mini-eighth stage__status"></li>
+            <li class="column-mini-eighth stage__status"></li>
+          </ol>
+        </div>
       </li>
+
       <li class="development-path grid-row">
         <div class="column-quarter">
-          Product design
+          <span class="development-path__name">Product design</span>
         </div>
-        <div class="column-twelfth stage__status stage__status--complete"></div>
-        <div class="column-twelfth stage__status"></div>
-        <div class="column-twelfth stage__status stage__status--complete"></div>
-        <div class="column-twelfth stage__status stage__status--complete"></div>
-        <div class="column-twelfth stage__status"></div>
-        <div class="column-twelfth stage__status"></div>
-        <div class="column-twelfth stage__status stage__status--complete"></div>
-        <div class="column-twelfth stage__status"></div>
+        <div class="column-three-quarter">
+          <ol class="development-path__steps">
+            <li class="column-mini-eighth stage__status stage__status--complete"></li>
+            <li class="column-mini-eighth stage__status"></li>
+            <li class="column-mini-eighth stage__status stage__status--complete"></li>
+            <li class="column-mini-eighth stage__status stage__status--complete"></li>
+            <li class="column-mini-eighth stage__status"></li>
+            <li class="column-mini-eighth stage__status"></li>
+            <li class="column-mini-eighth stage__status stage__status--complete"></li>
+            <li class="column-mini-eighth stage__status"></li>
+          </ol>
+        </div>
       </li>
+
       <li class="development-path grid-row">
         <div class="column-quarter">
-          CSS
+          <span class="development-path__name">CSS</span>
         </div>
-        <div class="column-twelfth stage__status stage__status--complete"></div>
-        <div class="column-twelfth stage__status"></div>
-        <div class="column-twelfth stage__status stage__status--complete"></div>
-        <div class="column-twelfth stage__status stage__status--complete"></div>
+        <div class="column-three-quarter">
+          <ol class="development-path__steps">
+            <li class="column-mini-eighth stage__status stage__status--complete"></li>
+            <li class="column-mini-eighth stage__status"></li>
+            <li class="column-mini-eighth stage__status stage__status--complete"></li>
+            <li class="column-mini-eighth stage__status stage__status--complete"></li>
+          </ol>
+        </div>
       </li>
+
     </ul>
     <a class="foot-link" href="/learning/mandatory">see pathways available to you</a>
   </section>
