--- a/application/signup/templates/partials/settings.html
+++ b/application/signup/templates/partials/settings.html
@@ -1,4 +1,4 @@
-<a href="/settings" class="settings-btn settings-btn--right">settings</a>
+<a href="/settings" class="settings-btn btn--right">settings</a>
 <div class="settings__wrap">
   <form class="settings__form">
     <fieldset>
