make both search boxs use same styling

--- a/application/signup/templates/csprofile_learning.html
+++ b/application/signup/templates/csprofile_learning.html
@@ -6,10 +6,10 @@
 <main id="content" role="main">
   <h1 class="heading-large">Your learning</h1>
   <section class="grid-row section--bottom">
-    <div class="column-third course__search">
+    <div class="column-third component--finder">
       <section class="">
-        <h2 class="heading-small">Quick course search</h2>
-        <p class="form-hint">Search by name, skill or keyword</p>
+        <h2 class="heading-small component__head">Quick course search</h2>
+        <p>Search by name, skill or keyword</p>
         <form action="" class="form">
           <div class="form-group people-finder-search">
             <label class="people-finder-label" for="person-search">find courses</label>
