--- a/application/signup/templates/basicprofile.html
+++ b/application/signup/templates/basicprofile.html
@@ -22,7 +22,10 @@
           </div>
           <div class="column-third">
             <div class="welcome__action__wrap cv-upload-btn"><a href="">upload cv</a></div>
+
+            {% if not profile.data.integrations.linkedin %}
             <div class="welcome__action__wrap linkedin-upload-btn"><a href="">add linkedin</a></div>
+            {% endif %}
           </div>
           <div class="column-third">
             <div class="welcome__action__wrap">
@@ -31,6 +34,13 @@
             </div>
           </div>
         </div>
+        {% if profile.data.locations is not defined %}
+        <div class="grid-row">
+           <div class="column-third">
+             <div class="welcome__action__wrap"><a href="{{ locations_url }}">your location</a></div>
+           </div>
+        </div>
+        {% endif %}
       </div>
     </div>
     <a class="welcome__skip" href="">skip &and;</a>
