--- a/application/jobs/templates/includes/signup.html
+++ b/application/jobs/templates/includes/signup.html
@@ -1,29 +1,14 @@
 <aside class="signup__wrap">
   <div class="signup">
-    <form class="signup__form" action="">
-      <h2 class="heading-medium">Create GOV.UK profile</h2>
-      <p>If you create a profile you can:</p>
+    <h2 class="heading-medium">Create GOV.UK profile</h2>
+    <p>If you create a profile you can:</p>
 
-      <ul class="list-bullet"><li>apply for civil service jobs</li>
-      <li>set up email job alerts</li>
-      <li>save applications and vacancies</li></ul>
-      <div class="form-group">
-        <label class="form-label" for="email">Email</label>
-        <input type="text" class="form-control signup__input" id="email">
-      </div>
+    <ul class="list-bullet"><li>apply for civil service jobs</li>
+    <li>set up email job alerts</li>
+    <li>save applications and vacancies</li></ul>
 
-      <!-- Primary buttons, secondary links -->
-      <div class="form-group">
-        <button type="submit" class="button signup__btn">
-          <span data-provider="default" class="signup__btn__content--active">Create profile</span>
-          <span data-provider="google">Create using google account</span>
-          <span data-provider="facebook">Create using facebook account</span>
-        </button>
-        <ul>
-          <li><a class="signup__close" href="/">Close</a></li>
-        </ul>
-      </div>
-    </form>
+    {% include "public/includes/form.html" %}
+
   </div>
 </aside>
 <div class="signup__success__wrap">
