change label from skip to close

--- a/application/signup/templates/basicprofile.html
+++ b/application/signup/templates/basicprofile.html
@@ -43,7 +43,7 @@
         {% endif %}
       </div>
     </div>
-    <a class="welcome__skip" href="">skip &and;</a>
+    <a class="welcome__skip" href="">close &and;</a>
   </section>
 </aside>
 
