--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -52,7 +52,7 @@ information regarding the template.
 {% block body_end %}
 
   {# TODO jsmin etc #}
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-2.1.3.min.js"></script>
 
   {% assets "js_govuk" %}
     <script type="text/javascript" src="{{ ASSET_URL }}"></script>
