--- a/application/signup/static/css/components/_component.scss
+++ b/application/signup/static/css/components/_component.scss
@@ -1,10 +1,9 @@
+// Profile Components
+// ==========================================================================
+
 .component {
   border-top: 3px solid $link-colour;
   padding: $gutter 0 45px;
-}
-
-.component--top {
-  margin-top: $gutter-half;
 }
 
 .component--secondary {
@@ -34,6 +33,11 @@
 .component__head {
   margin-top: 0;
 }
+
+.component__heading {
+  display: inline;
+}
+
 .component__body {
   
 }
@@ -60,5 +64,20 @@
 
   .component__body {
     padding-left: $gutter-half;
+  }
+}
+
+.component-expand-btn {
+  @include circle($gutter);
+  background: $link-colour;
+  color: $page-colour;
+  border: none;
+  font-size: 24px;
+  line-height: $gutter;
+  margin-left: $gutter-half;
+
+  &:hover {
+    cursor: pointer;
+    background: $link-hover-colour;
   }
 }
