--- a/application/signup/templates/basicprofile.html
+++ b/application/signup/templates/basicprofile.html
@@ -50,15 +50,13 @@
 <main id="content" role="main">
   <div class="grid-row">
     <div class="column-third">
-      <section class="container">
       {% include "partials/basicprofile.html" ignore missing %}
-      </section>
       <section class="component component--clear">
         {% include "partials/job-search-items.html" ignore missing %}
       </section>
     </div>
     <div class="column-two-thirds">
-      <section class="component component--top">
+      <section class="component">
         {% include "partials/todo_list.html" ignore missing %}
       </section>
 
