--- a/application/signup/templates/csprofile_jobs_apps.html
+++ b/application/signup/templates/csprofile_jobs_apps.html
@@ -6,12 +6,10 @@
 <main id="content" role="main">
   <div class="grid-row">
     <div class="column-quarter">
-      <section class="container">
-        {% include "partials/jobs_profile.html" ignore missing %}
-      </section>
-      <section class="container section">
+      {% include "partials/jobs_profile.html" ignore missing %}
+      <nav class="section">
         {% include "partials/jobs_menu.html" ignore missing %}
-      </section>
+      </nav>
     </div>
     <div class="column-three-quarter">
       {% include "partials/your_apps_head.html" ignore missing %}
