--- a/application/signup/templates/csprofile_perf_last_review.html
+++ b/application/signup/templates/csprofile_perf_last_review.html
@@ -17,16 +17,14 @@
 <main id="content" role="main">
   <div class="grid-row">
     <div class="column-quarter">
-      <section class="container">
-        {% include "partials/perf_profile.html" ignore missing %}
-      </section>
-      <section class="container section">
+      {% include "partials/perf_profile.html" ignore missing %}
+      <nav class="section">
         {% include "partials/perf_menu.html" ignore missing %}
-      </section>
+      </nav>
     </div>
     <div class="column-three-quarter">
       <header class="profile--include">
-        <h1 class="form-title heading-large">Your review</h1>
+        <h1 class="form-title heading-large section__head">Your review</h1>
 
         <p class="lede">Compare how you thought you've performed with how your colleagues think you've performed</p>
 
