--- a/application/signup/templates/csprofile_services.html
+++ b/application/signup/templates/csprofile_services.html
@@ -4,7 +4,7 @@
 {% include "partials/nav.html" ignore missing %}
 
 <main id="content" role="main">
-  <h1 class="heading-large">Services</h1>
+  <h1 class="heading-large section__head">Services</h1>
   <p class="lede">These are the services that can access your account and data. <a href="">Learn more</a>.</p>
   <section class="section">
     <ul>
