--- a/application/signup/templates/partials/job_search.html
+++ b/application/signup/templates/partials/job_search.html
@@ -1,6 +1,6 @@
 <form class="search__form" action="">
 
-  <h1 class="form-title heading-xlarge">
+  <h1 class="form-title heading-xlarge section__head">
     Search vacancies
   </h1>
 
