--- a/application/signup/templates/partials/people_finder.html
+++ b/application/signup/templates/partials/people_finder.html
@@ -1,4 +1,4 @@
-<section class="component--finder component--top people-finder">
+<section class="component--finder people-finder">
   <h4 class="heading-medium component__head">
     Civil Service people finder
   </h4>
