--- a/application/signup/templates/partials/your_apps_head.html
+++ b/application/signup/templates/partials/your_apps_head.html
@@ -1,5 +1,5 @@
 <header class="profile--include">
-  <h1 class="form-title heading-large">
+  <h1 class="form-title heading-large section__head">
   Your applications
   </h1>
 
