--- a/application/signup/templates/csprofile_jobs_alerts.html
+++ b/application/signup/templates/csprofile_jobs_alerts.html
@@ -6,16 +6,14 @@
 <main id="content" role="main">
   <div class="grid-row">
     <div class="column-quarter">
-      <section class="container">
-        {% include "partials/jobs_profile.html" ignore missing %}
-      </section>
-      <section class="container section">
+      {% include "partials/jobs_profile.html" ignore missing %}
+      <nav class="section">
         {% include "partials/jobs_menu.html" ignore missing %}
-      </section>
+      </nav>
     </div>
     <div class="column-three-quarter">
       {% include "partials/settings.html" ignore missing %}
-      <h1 class="heading-large">Your job alerts</h1>
+      <h1 class="heading-large section__head">Your job alerts</h1>
       <p class="lede">Below are the job alerts you currently have set up</p>
       {% include "partials/job_alerts.html" ignore missing %}
       <section class="section"><button class="button">+ add alert</button></section>
