move declarations from services.scss to more relevant location

--- a/application/signup/static/css/common/_typography_ext.scss
+++ b/application/signup/static/css/common/_typography_ext.scss
@@ -45,3 +45,12 @@
   color: $secondary-text-colour;
   font-weight: normal;
 }
+
+.secondary {
+  color: $secondary-text-colour;
+  font-size: 16px;
+
+  span {
+    display: block;
+  }
+}
