--- a/application/signup/static/css/components/_buttons.scss
+++ b/application/signup/static/css/components/_buttons.scss
@@ -36,3 +36,12 @@
 .btn--right {
   float: right;
 }
+
+// used on list of services page
+.revoke__btn {
+  margin-top: em(25, 20);
+
+  @include media(tablet) {
+    margin-top: em(45, 24);
+  }
+}
