add and use %banner class

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -26,14 +26,13 @@
 @import 'components/objectives';
 @import 'components/settings';
 @import 'components/todo';
-@import 'components/welcome';
+@import 'components/banners';
 @import 'components/week-view';
 @import 'components/next-meeting';
 @import 'components/progresslist';
 @import 'components/data-item';
 @import 'components/table';
 @import 'components/people';
-@import 'components/app_submitted';
 @import 'components/component';
 @import 'components/people-finder';
 
